name:                dispatch-article
version:             0.1.0.0
synopsis:            A article micro service
description:         Please see README.md
homepage:            https://github.com/Lupino/dispatch-article#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Article
                     , Article.Application
                     , Article.DataSource
                     , Article.DataSource.Article
                     , Article.DataSource.File
                     , Article.DataSource.Tag
                     , Article.DataSource.Timeline
                     , Article.DataSource.Table
                     , Article.Types
                     , Article.Types.Internal
                     , Article.Types.Class
                     , Article.Types.MySQL.File
                     , Article.Types.MySQL.Tag
                     , Article.Types.MySQL.Article
                     , Article.Types.CardItem
                     , Article.UserEnv
                     , Article.Router
                     , Article.Router.APIHandler
                     , Article.Router.Helper
                     , Article.Utils
                     , Article.Config
  build-depends:       base >= 4.7 && <5.0
                     , mysql-simple
                     , cryptohash
                     , bytestring
                     , hex
                     , aeson
                     , unordered-containers
                     , filepath
                     , unix-time
                     , scotty
                     , mtl
                     , text
                     , wai
                     , mime-types
                     , containers
                     , http-types

                     , haxl
                     , hashable
                     , resource-pool
                     , async

                     , tagsoup

                     , dispatch-common

                     , JuicyPixels
  default-language:    Haskell2010

executable dispatch-article
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dispatch-article
                     , warp
                     , streaming-commons
                     , scotty
                     , wai-extra
                     , wai-middleware-static
                     , data-default-class
                     , haxl
                     , yaml
                     , optparse-applicative
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/dispatch-article
