name:                yuntan-article
version:             0.1.0.0
synopsis:            A article micro service
description:         Please see README.md
homepage:            https://github.com/Lupino/yuntan-article#readme
license:             BSD3
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Article
                     , Article.Application
                     , Article.API
                     , Article.DataSource
                     , Article.DataSource.Article
                     , Article.DataSource.File
                     , Article.DataSource.Tag
                     , Article.DataSource.Timeline
                     , Article.DataSource.Table
                     , Article.Types
                     , Article.Types.Internal
                     , Article.Types.Class
                     , Article.Types.MySQL.File
                     , Article.Types.MySQL.Tag
                     , Article.Types.MySQL.Article
                     , Article.Types.CardItem
                     , Article.Router
                     , Article.Router.Handler
                     , Article.Router.Helper
                     , Article.Utils
                     , Article.Config
  build-depends:       base >= 4.7 && <5.0
                     , mysql-simple
                     , bytestring
                     , tagsoup
                     , resource-pool
                     , text
                     , haxl
                     , scotty
                     , yuntan-common
                     , aeson
                     , hashable
                     , unix-time
                     , cryptohash
                     , hex
                     , async
                     , filepath
                     , mtl
                     , wai
  default-language:    Haskell2010

executable yuntan-article
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , yuntan-article
                     , data-default-class
                     , streaming-commons
                     , warp
                     , scotty
                     , haxl
                     , wai-extra
                     , yaml
                     , optparse-applicative
                     , yuntan-common
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/yuntan-article
